--- a/_data/content/web/aktionsfeld-nr.-1.html
+++ b/_data/content/web/aktionsfeld-nr.-1.html
@@ -11,7 +11,7 @@ createdon: 1742526517
 publishedon: 1742526480
 publishedby: 1
 uri: ''
-properties: '{"contentblocks":{"_isContentBlocks":false},"fred":{"data":{"content":[{"widget":"583c4f09-9424-44dc-9b6e-9e7952c21050","values":[],"pluginsData":[],"settings":{"colorModifier":"","modifier":"elr-grid--row-cols-3"},"children":{"content":[{"widget":"73bd3f09-6ed5-432f-ae5a-9e7a3613e5db","values":{"content":{"_raw":{"_value":"<p>this should be a modal<\/p>"}},"link-indicator":{"_raw":{"_value":"\n                Learn More\n            "}}},"pluginsData":[],"settings":{"colorModifier":"","modifier":"","link":true,"linkPage":{"url":"\/euler\/index.php?id=17","id":"17"},"modal":true,"mediaUrl":"","mediaAlt":""},"children":[],"elId":"fred_ce4f8a3_hwtdlh65fw"}]},"elId":"fred_f1d964f_srifnvpllof"}],"fingerprint":"849f19777c773682d5c89093e2832c66a84803d7"},"plugins":[]}}'
+properties: '{"contentblocks":{"_isContentBlocks":false},"fred":{"data":{"content":[{"widget":"583c4f09-9424-44dc-9b6e-9e7952c21050","values":[],"pluginsData":[],"settings":{"colorModifier":"","modifier":"elr-grid__container--row-cols-3"},"children":{"content":[{"widget":"73bd3f09-6ed5-432f-ae5a-9e7a3613e5db","values":{"content":{"_raw":{"_value":"<p>this should be a modal<\/p>"}},"link-indicator":{"_raw":{"_value":"\n                Learn More\n            "}}},"pluginsData":[],"settings":{"colorModifier":"","modifier":"","link":true,"linkPage":{"url":"\/euler\/index.php?id=17","id":"17"},"modal":true,"mediaUrl":"","mediaAlt":""},"children":[],"elId":"fred_ce4f8a3_hwtdlh65fw"}]},"elId":"fred_f1d964f_srifnvpllof"}],"fingerprint":"b6589fc6ab0dc82cf12099d1c2d40ab994e8410c"},"plugins":[]}}'
 tvs:
     elr_header_modifier: ''
     elr_og_image: ''
@@ -21,8 +21,8 @@ tvs:
 
 -----
 
-<section class="elr-grid elr-grid--row-cols-3 ">
-    <div class="elr-grid__container"><div class="elr-card   elr-card--link">
+<section class="elr-grid ">
+    <div class="elr-grid__container elr-grid__container--row-cols-3"><div class="elr-card   elr-card--link">
     
                         <a class="elr-card__container" data-bs-toggle="modal" data-bs-target="#modal-17">
                 
