--- a/_data/fred_elements/9.html
+++ b/_data/fred_elements/9.html
@@ -4,11 +4,11 @@ uuid: 482901ae-db83-4246-855e-9e7a3fa6f52d
 image: 'https://placehold.co/300x150?text=Call-to-Action'
 category: 3
 rank: 2
-options_override: '{"settings":[{"fred-import":"colorModifier"},{"name":"modifier","label":"Modifier","type":"select","options":{" ":"Default"},"value":" "},{"name":"mediaUrl","label":"Media URL","type":"image","value":"[[++fred.theme.euler.theme_dir]]brand\/open-graph.png"},{"name":"mediaAlt","label":"Media Description for Screen Readers <br> (This is what you can factually see on the image)","type":"text","value":""},{"name":"linkPage","label":"Linked Page","type":"page"}]}'
+options_override: '{"settings":[{"fred-import":"colorModifier"},{"name":"modifier","label":"Modifier","type":"select","options":{" ":"Default"},"value":" "},{"name":"mediaUrl","label":"Media URL","type":"image","value":"[[++fred.theme.euler.theme_dir]]brand\/open-graph.png"},{"name":"mediaAlt","label":"Media Description for Screen Readers <br> (This is what you can factually see on the image)","type":"text","value":""},{"name":"linkPage","label":"Linked Page","type":"page"},{"fred-import":"sectionSpacer"}]}'
 
 -----
 
-<section class="elr-cta {{ modifier }} {{ colorModifier }}">
+<section class="elr-cta {{ modifier }} {{ colorModifier }} {{ sectionSpacer }}">
     <div class="elr-cta__container">
         <div class="elr-cta__col elr-cta__col--content">
             <div class="elr-cta__text" data-fred-name="content" data-fred-rte="true" data-fred-rte-config="paragraph">
