--- a/_data/fred_elements/8.html
+++ b/_data/fred_elements/8.html
@@ -4,11 +4,11 @@ uuid: 73bd3f09-6ed5-432f-ae5a-9e7a3613e5db
 image: 'https://placehold.co/300x150?text=Card'
 category: 2
 rank: 3
-options_override: '{"remote":true,"settings":[{"fred-import":"colorModifier"},{"name":"modifier","label":"Modifier","type":"select","options":{"":"Default","elr-card--bg-media":"Background Media"},"value":""},{"name":"link","label":"Hyperlink","type":"toggle","value":"0"},{"name":"linkPage","label":"Linked Page","type":"page"},{"name":"modal","label":"Open as Modal?","type":"toggle","value":"0"},{"name":"mediaUrl","label":"Media URL","type":"image","mediaSource":"Images","value":""},{"name":"mediaAlt","label":"Media Description for Screen Readers <br> (This is what you can factually see on the image)","type":"text","value":""}]}'
+options_override: '{"remote":true,"settings":[{"fred-import":"colorModifier"},{"name":"modifier","label":"Modifier","type":"select","options":{"":"Default","elr-card--bg-media":"Background Media"},"value":""},{"name":"link","label":"Hyperlink","type":"toggle","value":"0"},{"name":"linkPage","label":"Linked Page","type":"page"},{"name":"modal","label":"Open as Modal?","type":"toggle","value":"0"},{"name":"mediaUrl","label":"Media URL","type":"image","mediaSource":"Images","value":""},{"name":"mediaAlt","label":"Media Description for Screen Readers <br> (This is what you can factually see on the image)","type":"text","value":""},{"fred-import":"aspectRatio"},{"fred-import":"objectFit"}]}'
 
 -----
 
-<div class="elr-card {{ modifier }} {{ colorModifier }} {% if link %}elr-card--link{% endif %}">
+<div class="elr-card {{ modifier }} {{ colorModifier }} {{ aspectRatio }} {{ objectFit }} {% if link %}elr-card--link{% endif %}">
     
     {% if link %}
         {% if modal %}
