added image resource

--- a/_data/content/web/value-card-title.html
+++ b/_data/content/web/value-card-title.html
@@ -10,17 +10,17 @@ template: 6
 menuindex: 3
 createdby: 1
 createdon: 1742745255
-publishedon: 1742817488
+publishedon: 1742817480
 publishedby: 1
 uri: ''
-properties: '{"fred":{"data":{"fingerprint":"b6589fc6ab0dc82cf12099d1c2d40ab994e8410c"}}}'
+properties: '{"fred":{"data":{"fingerprint":"6cf9b453b3905a8d3fe5c55a17843169ac299c55"}},"contentblocks":{"_isContentBlocks":false}}'
 tvs:
     elr_layout_card_primary: ''
     elr_layout_card_secondary: ''
     elr_meta_associatedperson: ''
     elr_meta_tag: ''
     elr_meta_url: ''
-    elr_og_image: screenshot-2025-03-07-at-19.02.33-(2).png
+    elr_og_image: fabrizio-conti-rMWmDMeaoBk-unsplash.jpg
     elr_og_image_alt: ''
     elr_subtitle: ''
     elr_tag_actionarea: ''
