--- a/_data/content/web/buch.html
+++ b/_data/content/web/buch.html
@@ -13,7 +13,7 @@ createdon: 1742608804
 publishedon: 1742817420
 publishedby: 1
 uri: ''
-properties: '{"contentblocks":{"_isContentBlocks":false},"fred":{"data":{"fingerprint":"b6589fc6ab0dc82cf12099d1c2d40ab994e8410c"}}}'
+properties: '{"contentblocks":{"_isContentBlocks":false},"fred":{"data":{"fingerprint":"6dc32bfec547f41856c17b2084971113f5a27101"}}}'
 tvs:
     elr_meta_associatedperson: ''
     elr_meta_author: ''
@@ -29,7 +29,7 @@ tvs:
     elr_meta_targetgroup: ''
     elr_meta_targetoccupation: ''
     elr_meta_url: ''
-    elr_og_image: screenshot-2025-03-07-at-19.02.33-(2).png
+    elr_og_image: fabrizio-conti-rMWmDMeaoBk-unsplash.jpg
     elr_og_image_alt: ''
     elr_subtitle: ''
     elr_tag_actionarea: '9'
