--- a/_data/content/web/insight-artikel.html
+++ b/_data/content/web/insight-artikel.html
@@ -9,14 +9,14 @@ content: ''
 template: 3
 createdby: 1
 createdon: 1742606522
-publishedon: 1742817475
+publishedon: 1742817420
 publishedby: 1
 uri: ''
-properties: '{"fred":{"data":{"fingerprint":"b6589fc6ab0dc82cf12099d1c2d40ab994e8410c"}},"contentblocks":{"_isContentBlocks":false}}'
+properties: '{"fred":{"data":{"fingerprint":"9ea13238bee1922e22a0193efd90c5d896e92a11"}},"contentblocks":{"_isContentBlocks":false}}'
 tvs:
     elr_meta_associatedperson: '16'
     elr_meta_tag: ''
-    elr_og_image: screenshot-2025-03-07-at-19.02.33-(2).png
+    elr_og_image: fabrizio-conti-rMWmDMeaoBk-unsplash.jpg
     elr_og_image_alt: ''
     elr_subtitle: ''
     elr_tag_actionarea: '9'
