ADDED filter by blog template for `populated grid` + also fixed layout modifier for `populated grid`

--- a/_data/fred_elements/3.html
+++ b/_data/fred_elements/3.html
@@ -4,7 +4,7 @@ uuid: 583c4f09-9424-44dc-9b6e-9e7952c21050
 description: 'Grid for nesting other blocks'
 image: 'https://placehold.co/300x150?text=Grid'
 category: 1
-options_override: '{"settings":[{"fred-import":"colorModifier"},{"name":"modifier","label":"Layout Modifier","type":"select","options":{"elr-grid__container--row-cols-1":"1 Column","elr-grid__container--row-cols-2":"2 Columns","elr-grid__container--row-cols-3":"3 Columns","elr-grid__container--row-cols-4":"4 Columns","elr-grid__container--row-cols-6":"6 Clomuns","elr-grid__container--blog-style":"Blog Style"},"value":"elr-grid--row-cols-3"},{"fred-import":"sectionSpacer"}]}'
+options_override: '{"settings":[{"fred-import":"colorModifier"},{"fred-import":"gridModifierLayout"},{"fred-import":"sectionSpacer"}]}'
 
 -----
 
