--- a/_data/chunks/elr-tpl-card.html
+++ b/_data/chunks/elr-tpl-card.html
@@ -17,9 +17,9 @@ properties: 'a:0:{}'
                 [[++fred.theme.euler.name_[[elrGetTemplatePorperty?&id=`[[+id]]`&property=`elrTemplateName`]]]]
             </div>
             <h3 class="elr-card__title">[[+pagetitle]]</h3>
-            <div class="__link-indicator">
+            <!-- <div class="__link-indicator">
                 [[-+template:is=`3`:then=`Read More`:else=`Learn More`]]
-            </div>
+            </div> -->
         </div>
     </a>
 </div>
