FIX footer company name and LinkedIn link

--- a/_data/chunks/elr-footer.html
+++ b/_data/chunks/elr-footer.html
@@ -22,7 +22,7 @@ properties: 'a:0:{}'
                 </p>
             </div>
             <div class="elr-footer__social">
-                <a href="https://www.linkedin.com/[[++fred.theme.euler.social_linkedin]]" target="_blank"><span class="bi-linkedin"></span></a>
+                <a href="https://www.linkedin.com/company/[[++fred.theme.euler.social_linkedin]]" target="_blank"><span class="bi-linkedin"></span></a>
                 <a href="https://www.instagram.com/[[++fred.theme.euler.social_instagram]]" target="_blank"><span class="bi-instagram"></span></a>
             </div>
         </div>
@@ -56,6 +56,6 @@ properties: 'a:0:{}'
         ]]
     </div>
     <div>
-        [[!+now:default=`now`:strtotime:date=`%Y`]] &copy; euler theme
+        [[!+now:default=`now`:strtotime:date=`%Y`]] &copy; [[++site_name]]
     </div>
 </footer>
