FIX display corresponding data on cards for the specific pages template (applies to `populated grid`)

--- a/_data/chunks/elr-tpl-card.html
+++ b/_data/chunks/elr-tpl-card.html
@@ -10,7 +10,31 @@ properties: 'a:0:{}'
 <div class="elr-card elr-card--link [[+tv.elr_theme_color]]">
     <a class="elr-card__container" href="[[~[[+id]]]]">
         <div class="elr-card__media">
-            <img src="[[+tv.elr_og_image]]" alt="[[+tv.elr_og_image_alt]]">
+            <img
+                src="[[elrGetTemplatePorperty:select=`teammember=[[+tv.elr_team_image]]&book=[[+tv.elr_meta_book_cover]]`:isempty=`
+                        [[+tv.elr_og_image]]
+                    `?
+                    &id=`[[+id]]`
+                    &property=`elrTemplateName`
+                ]]"
+                alt="[[elrGetTemplatePorperty:select=`teammember=[[+pagetitle]]&book=[[+tv.pagetitle]]`:isempty=`
+                        [[+tv.elr_og_image_alt]]
+                    `?
+                    &id=`[[+id]]`
+                    &property=`elrTemplateName`
+                ]]"
+                class="[[elrGetTemplatePorperty:select=`teammember=elr--aspect-ratio-1-1&book=elr--object-fit-contain`:isempty=``?
+                    &id=`[[+id]]`
+                    &property=`elrTemplateName`
+                ]]"
+            >
+            [[elrGetTemplatePorperty:is=`partner`
+                :then=`
+                    <img src="[[+tv.elr_meta_logo]]" alt="[[+pagetitle]] Logo" class="elr-card__logo">
+                `:else=``?
+                &id=`[[+id]]`
+                &property=`elrTemplateName`
+            ]]
         </div>
         <div class="elr-card__body">
             <div class="elr-card__subtitle">
