FIX various src attributes to be absolute

--- a/_data/chunks/elr-header.html
+++ b/_data/chunks/elr-header.html
@@ -94,7 +94,7 @@ properties: 'a:0:{}'
             <div class="elr-meta__container">
                 <div class="elr-meta__col elr-meta__col--side-start">
                     <div class="elr-meta__media">
-                        <img src="[[+elrTemplateName:is=`book`:then=`[[*elr_meta_book_cover]]`]][[+elrTemplateName:is=`partner`:then=`[[*elr_meta_logo]]`]][[+elrTemplateName:is=`teammember`:then=`[[*elr_team_image]]`]]" alt="">
+                        <img src="[[++base_url]][[+elrTemplateName:is=`book`:then=`[[*elr_meta_book_cover]]`]][[+elrTemplateName:is=`partner`:then=`[[*elr_meta_logo]]`]][[+elrTemplateName:is=`teammember`:then=`[[*elr_team_image]]`]]" alt="">
                     </div>
                 </div>
                 <div class="elr-meta__col elr-meta__col--main">
