FIX blog author reference is now a link

--- a/_data/chunks/elr-header.html
+++ b/_data/chunks/elr-header.html
@@ -132,10 +132,10 @@ properties: 'a:0:{}'
                     `]]
                     <div class="elr-meta__info">
                         [[*elr_meta_associatedperson:notempty=`
-                            <div class="elr-meta__author">
+                            <a href="[[~[[*elr_meta_associatedperson]]]]" class="elr-meta__author">
                                 <img src="[[pdoField?&id=`[[*elr_meta_associatedperson]]`&field=`elr_team_image`]]" alt="">
                                 <span>[[pdoField?&id=`[[*elr_meta_associatedperson]]`&field=`longtitle`]]</span>
-                            </div>
+                            </a>
                         `]]
                         <div class="elr-meta__published">
                             <span>[[*publishedon:date=`%d.%m.%Y`]]</span>
