--- a/_data/fred_elements/5.html
+++ b/_data/fred_elements/5.html
@@ -4,11 +4,11 @@ uuid: 42e91379-993b-4a73-8b95-9e795944617f
 description: 'List of collapsible items with heading and text'
 image: 'https://placehold.co/300x150?text=Accordion'
 category: 2
-options_override: '{"settings":[{"fred-import":"colorModifier"},{"name":"identifier","label":"Accordion ID (no spaces; must be unqiue on page)","type":"text","value":"1"},{"name":"length","label":"Number of Items","type":"slider","min":1,"max":10,"value":4}]}'
+options_override: '{"settings":[{"fred-import":"colorModifier"},{"name":"identifier","label":"Accordion ID (no spaces; must be unqiue on page)","type":"text","value":"1"},{"name":"length","label":"Number of Items","type":"slider","min":1,"max":10,"value":4},{"name":"modifier","label":"Modifier","type":"select","options":{"":"Inherit","elr-accordion--default":"Default","elr-accordion--transparent":"Transparent"},"value":""}]}'
 
 -----
 
-<div class="elr-accordion {{ colorModifier }}" id="accordion-{{ identifier }}">
+<div class="elr-accordion {{ modifier }} {{ colorModifier }}" id="accordion-{{ identifier }}">
     {% for i in 1..length %}
         <div class="elr-accordion__item">
             <h2 class="elr-accordion__header" id="heading-{{ identifier }}-{{i}}">
