--- a/_data/fred_elements/8.html
+++ b/_data/fred_elements/8.html
@@ -24,7 +24,7 @@ options_override: '{"remote":true,"settings":[{"fred-import":"colorModifier"},{"
             <img src="{{ mediaUrl }}" alt="{{ mediaAlt }}">
         </div>
         <div class="elr-card__body">
-            <div data-fred-name="content" data-fred-rte="true" data-fred-rte-config="paragraph">
+            <div class="elr-card__text" data-fred-name="content" data-fred-rte="true" data-fred-rte-config="paragraph">
                 Insert text here...
             </div>
             <div class="elr-card__link-indicator" data-fred-name="link-indicator" data-fred-rte="true">
